--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,10 @@
     <header>
       <div class="template-header">
         <div class="logo">
-          <img src="" alt="" />
+          <img
+            src="https://github.com/kavin-yotpo/decorativeceilingtiles.net---v3/blob/main/src/images/logo.png"
+            alt="logo"
+          />
         </div>
       </div>
     </header>
