--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
       <div class="template-header">
         <div class="logo">
           <img
-            src="https://github.com/kavin-yotpo/decorativeceilingtiles.net---v3/blob/main/src/images/logo.png"
+            src="https://cdn.shopify.com/s/files/1/0708/4605/4708/files/decorativeceilingtiles.net-logo.png?v=1748585575"
             alt="logo"
           />
         </div>
